removed unneeded images, updated social icons, fixed footer spacing

--- a/css/presets/defaults.less
+++ b/css/presets/defaults.less
@@ -3,7 +3,7 @@
 // Can relate to styles.xml Customizer Panel in C5
 
 @preset-name: "Mischievous";
-@preset-icon: concrete-icon(#75ca2a, #fff, #0099ff);
+@preset-icon: concrete-icon(#ed1a0d, #fff, #0099ff);
 @preset-fonts-file: "build/fonts/defaults.less";
 
 
@@ -32,22 +32,22 @@
 @text-muted:             lighten(@text-color, 40%);
 @headline-color:		 @text-color;
 
-@gray-base:              #000;
+@gray-base:              #000; 
 @gray-darker:            lighten(@gray-base, 13.5%); // #222
 @gray-dark:              lighten(@gray-base, 20%);   // #333
 @gray-medium:            lighten(@gray-base, 33.5%); // #555
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@scheme-dominant:        #231082; // primary color used most
-@scheme-callout:         red; // complementary for buttons, links
-@scheme-support:         #39a300; // supports the primary color
+@scheme-dominant:        #373737; // primary color used most 323b44
+@scheme-callout:         #ed1a0d; // complementary for buttons, links
+@scheme-support:         #b20000; // supports the primary color
 @scheme-highlight:       #ae0025; // secondary highlight
 
-@scheme-dominant-shade:  darken(@scheme-dominant, 30%);
+@scheme-dominant-shade:  darken(@scheme-dominant, 10%);
 @scheme-dominant-tint:   lighten(@scheme-dominant, 30%);
 
-@scheme-callout-shade:   darken(@scheme-callout, 30%);
+@scheme-callout-shade:   darken(@scheme-callout, 10%);
 @scheme-callout-tint:    lighten(@scheme-callout, 30%);
 
 @scheme-support-shade:   darken(@scheme-support, 30%);
